@@ -1,3 +1,6 @@
+2009-01-29 Document 'resolution' kwarg for polar plots.  Support it
+           when using pyplot.polar, not just Figure.add_axes. - MGD
+
 2009-01-29 Rework the nan-handling/clipping/quantizing/simplification
            framework so each is an independent part of a pipeline.
            Expose the C++-implementation of all of this so it can be
